<resources>
    <string name="app_name" translatable="false">RoboGuide</string>

    <string name="btnSpeakHelloWorld" translatable="false">Hello World</string>
    <string name="btnSpeakLocations" translatable="false">Read locations</string>
    <string name="btnCancelSpeak" translatable="false">Cancel Speak</string>
    <string name="btnGotoHomeBase" translatable="false">Goto Home Base</string>
    <string name="btnExit" translatable="false">Exit App</string>
    <string name="btnRating">Bewertung abgeben</string>
    <string name="btnSkipRating">Bewertung überspringen</string>
    <string name="secondHeading">Wie hat dir die Führung gefallen?</string>
    <string name="Heading">Ende der Führung</string>
    <string name="textImportantExplanation" translatable="false">Nur wichtiege Informationen</string>
    <string name="textLongExplanation">Ausführliche Informationen</string>
    <string name="start_der_tour">Start der Tour</string>
    <string name="explination_length">Länge der Erklärung</string>
    <string name="long_explanation">Ausfuehrliche Inforamtionen</string>
    <string name="important_information">Nur wichtiege Informationen</string>
    <string name="lentgh_of_the_explanation">Länge der Erklärung</string>
    <string name="heading_two">Planen sie Ihre Führung</string>
    <string name="welcomeText">Wilkommen im Computermuseum</string>
    <string name="list_of_exhibits">Liste der Ausstellungsstücke</string>
    <string name="willkommen">Willkommen</string>
    <string name="choose_guide_type">Wählen Sie die Art der Führung</string>
    <string name="explanation_type">Erklärungsart:</string>
    <string name="v_short">Kurz</string>
    <string name="v_long">Lang</string>
    <string name="detail_level">Detaillierungsgrad:</string>
    <string name="simple">Einfach</string>
    <string name="detailed">Ausführlich</string>
    <string name="individual">Individuell</string>
    <string name="start">Start</string>
    <string name="zur_ck">Zurück</string>
    <string name="exit">Exit</string>
    <string name="skip">Überspringen</string>
    <string name="pause">Pause</string>
    <string name="beschreibung_des_aktuellen_bereichs">Beschreibung des aktuellen Bereichs</string>
    <string name="aktueller_bereich_bereich_1">Aktueller Bereich: Bereich 1</string>
    <string name="f_hrung">Führung</string>
    <string name="nur_wichtige_bereiche">nur wichtige Bereiche</string>
    <string name="art_der_tour">Art der Tour</string>
    <string name="listHeading">Liste der Austellungsstücke</string>
    <string name="pauseContinue">Pause</string>
</resources>