<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/execution_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExecutionActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_hrung"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvCurrentArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aktueller_bereich_bereich_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/llDescriptionImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:text="@string/beschreibung_des_aktuellen_bereichs" />

        <ImageView
            android:id="@+id/ivAreaImage"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="Bild"
            android:scaleType="centerCrop"
             />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btnPauseContinue"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:padding="20dp"
            android:text="@string/pauseContinue"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/pauseButton" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:padding="20dp"
            android:text="@string/skip"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:padding="20dp"
            android:text="@string/exit"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_red_dark" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
