<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/individual_guide_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualGuideActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/listHeading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="624dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/containerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="50dp">

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/selectedItemAmount"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="30sp"
                    android:text="Du hast 0 locations ausgewählt"
                    android:gravity="center"/>

                <RadioGroup

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="30sp"
                        android:text="Kurze Beschreibung" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/radio_selector"
                        android:gravity="center"
                        android:checked="true"
                        android:button="@android:color/transparent"
                        android:layout_weight="1"
                        android:textSize="30sp"
                        android:text="Ausführliche Beschreibung" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/radio_button_unchecked"
                    android:clickable="false"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:textSize="30sp"
                    android:text="@string/start"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:paddingStart="32dp"
                    android:textSize="30sp"
                    android:paddingEnd="32dp"
                    android:text="@string/zur_ck"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
